--- a/style.css
+++ b/style.css
@@ -137,6 +137,22 @@ a{
 	color: #e65836;
 }
 
+.lightGreen-b{
+	background: #9bd3ca;
+}
+.darkGreen-b{
+	background: #055464;
+}
+.green-b{
+	background: #099690;
+}
+.lightOrange-b{
+	background: #e1a277;
+}
+
+.darkOrange-b{
+	background: #e65836;
+}
 
 
 .home-1{
@@ -241,7 +257,8 @@ a{
 		background-image: url(img/home/star.png);
 		background-size: 100%;
 		background-repeat: no-repeat;
-		animation: opa 2s infinite;
+		animation: opa 3s infinite;
+		animation-direction: alternate;
 		transform: scale(1);
 	}
 	.home-3{
@@ -483,9 +500,6 @@ a{
 	}
 	#caption{
 		width: 70%;
-	}
-	#btn{
-		margin: 20px;
 	}
 	#clickMe{
 		height: 70vh;
@@ -764,5 +778,21 @@ iframe{
 .a-animate{
 	transition: all .3s;
 	animation: a-ani-page .3s;
+}
+
+#btn{
+	margin-top: 20px;
+	height: 50px;
+	width: 200px;
+	border-radius: 20px;
+	border: none;
+	font-family: Winter !important;
+	font-size: 20pt;
+	color: white;
+}
+#btn:hover{
+	opacity: 0.7;
+	animation: obj-scl .3s infinite alternate;
+	animation:rotg .3s infinite alternate;
 }
 
