--- a/style.css
+++ b/style.css
@@ -375,25 +375,14 @@ a{
     	line-height: 1.7;
 	}
 
-	.h-section-1{
-		width: 100%;
-		padding: 10px;
-		position: relative;
-		display: -webkit-inline-box;
-	}
-
-	.h-section-2{
-		padding: 10px;
-	}
-
-	.h-section-2 img{
-		float: right;
+	.h-section{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
 
 	.img-left{
-		width: 100%;
-		height: 200px;
-		display: inline-block;
+		width: 60%;
 	}
 	.img-right{
 		display: inline-block;
@@ -661,8 +650,6 @@ a{
 		display: inline-block;
 	}
 	.a-work{
-		position: relative;
-    	top: 75px;
     	padding-top: 30px;
     	margin-bottom: 50px;
 	}
@@ -676,7 +663,7 @@ a{
 	}
 	.a-innerContent{
 		width: 65%;
-		left: 26%;
+		left: 22%;
 		padding-right: 40px;
 		display: inline-block;
 		position: absolute;
